<resources>
    <string name="app_name">Smart Alarm</string>
    <string name="txt_hello">Hello,</string>
    <string name="txt_welcome">Welcome in Smart Alarm</string>
    <string name="txt_time_today">13.05</string>
    <string name="txt_date_today">Sun, 26 December 2021</string>
    <string name="txt_set_reminder">Set Your Reminder</string>
    <string name="txt_set">Set</string>
    <string name="txt_one_time_alarm">One Time Alarm</string>
    <string name="txt_repeating_alarm">Repeating Alarm</string>
    <string name="txt_your_alarm">Your Alarm</string>
    <string name="txt_set_date">Set Date</string>
    <string name="txt_set_time">Set Time</string>
    <string name="txt_note">Note</string>
    <string name="txt_add_set_alarm">Add Set Alarm</string>
    <string name="txt_cancel_set_alarm">Cancel Set Alarm</string>
    <string name="txt_input_note">Input Your Note</string>
    <string name="content_image_icon_one_time">Image Icon One Time</string>
    <string name="txt_cencel_set_alarm">Cencel Set Alarm</string>
    <string name="time_09_30">09.30</string>
    <string name="note_team_meeting">Team Meeting</string>
    <string name="date_sen_27_december_2021">Sen, 27 December 2021</string>
</resources>