<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_hello"
            android:textColor="#80FFFFFF"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_welcome"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/tv_hello" />


        <TextClock
            android:id="@+id/tv_time_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_medium"
            android:format12Hour="hh:mm"
            android:format24Hour="hh:mm"
            android:gravity="center"
            android:text="@string/txt_time_today"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


        <TextClock
            android:id="@+id/tv_date_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_medium"
            android:format12Hour="EEEE, dd MMMM yyyy"
            android:format24Hour="EEEE, dd MMMM yyyy"
            android:gravity="center"
            android:text="@string/txt_date_today"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_time_today" />


        <LinearLayout
            android:id="@+id/view_type_alarm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rounded_white"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date_today">

            <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/txt_set_reminder"
                android:textColor="@color/blueText"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/view_set_one_time_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_rounded_gradient_purple">

                    <TextView
                        android:id="@+id/tv_set1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_set"
                        android:textColor="#80FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_one_time_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_one_time_alarm"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_set1" />

                    <ImageView
                        android:id="@+id/iv_one_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_one_time"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/view_set_repeating_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_rounded_gradient_orange">

                    <TextView
                        android:id="@+id/tv_set2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_set"
                        android:textColor="#80FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_repeating_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/txt_repeating_alarm"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_set2" />

                    <ImageView
                        android:id="@+id/iv_repeating"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_repeating"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_your_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_your_alarm"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/view_type_alarm" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reminder_alarm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_your_alarm"
            tools:listitem="@layout/row_item_alarm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>