<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".OneTimeAlarmActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_title_one_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_set"
            android:textColor="#80ffffff"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_one_time_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/txt_one_time_alarm"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_image_icon_one_time"
            android:src="@drawable/ic_one_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_content_one_time"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="25dp"
        android:background="@drawable/bg_rounded_white"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_title_one_time">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_data_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/lightBlue"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_date_one_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_one_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="Date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_date_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blueText"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/txt_set_date"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_time_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/lightBlue"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/cv_data_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_time_one_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_one_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="Time"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_time_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blueText"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/txt_set_time"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_note_one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:text="Note"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cv_time_one_time" />

        <EditText
            android:id="@+id/edt_note_one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#647aff"
            android:hint="@string/txt_input_note"
            android:textColor="@color/blueText"
            app:layout_constraintTop_toBottomOf="@id/tv_note_one_time" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_add_set_one_time_alarm"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/edt_note_one_time"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/txt_add_set_alarm"
            android:textColor="@color/white"
            android:background="@drawable/bg_rounded_gradient_blue"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_cancel_set_one_time_alarm"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/btn_add_set_one_time_alarm"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/txt_cencel_set_alarm"
            android:textColor="@color/blueText"
            android:background="@drawable/bg_rounded_gradient_white_stroke"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>